// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`children should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c3::before,
.c3::after {
  box-sizing: border-box;
}

.c4 {
  vertical-align: baseline;
}

.c4.fi-static-icon {
  display: inline-block;
}

.c4.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c4.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  position: relative;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_label {
  font-size: 16px;
  position: relative;
  cursor: pointer;
  line-height: 27px;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  z-index: -9999;
  height: 18px;
  width: 18px;
  top: 5px;
  left: 2px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 3px;
  left: 0;
  margin: 2px;
  height: 18px;
  width: 18px;
  position: absolute;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(201,7%,58%);
  fill: hsl(0,0%,100%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -1px;
  left: -1px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  outline: 2px solid transparent;
}

.c1.fi-radio-button .fi-radio-button_input:focus:not(:focus-visible) + .fi-radio-button_icon_wrapper {
  box-shadow: none;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
  cursor: not-allowed;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  fill: hsl(202,7%,97%);
  stroke: hsl(202,7%,80%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  top: 2px;
  left: 2px;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 0;
  left: 0;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-radio-button_icon {
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  width: 32px;
  height: 32px;
  top: -1px;
  left: -1px;
}

.c1.fi-radio-button--large .fi-radio-button_label {
  padding-left: 40px;
  line-height: 34px;
}

<div>
  <div
    class="c0 fi-radio-button fi-radio-button_container c1"
  >
    <input
      class="c2 fi-radio-button_input"
      id="test-id"
      type="radio"
      value="value"
    />
    <span
      class="c3 fi-radio-button_icon_wrapper"
    >
      <svg
        aria-hidden="true"
        class="fi-icon c4 fi-radio-button_icon"
        focusable="false"
        height="1em"
        viewBox="0 0 18 18"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <circle
            class="fi-icon-radio-base"
            cx="9"
            cy="9"
            r="8.5"
          />
          <circle
            class="fi-icon-radio-checked"
            cx="9"
            cy="9"
            r="4"
          />
        </g>
      </svg>
    </span>
    <label
      class="c5 fi-radio-button_label"
      for="test-id"
    >
      Option 1
    </label>
  </div>
</div>
`;

exports[`className should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c3::before,
.c3::after {
  box-sizing: border-box;
}

.c4 {
  vertical-align: baseline;
}

.c4.fi-static-icon {
  display: inline-block;
}

.c4.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c4.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  position: relative;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_label {
  font-size: 16px;
  position: relative;
  cursor: pointer;
  line-height: 27px;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  z-index: -9999;
  height: 18px;
  width: 18px;
  top: 5px;
  left: 2px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 3px;
  left: 0;
  margin: 2px;
  height: 18px;
  width: 18px;
  position: absolute;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(201,7%,58%);
  fill: hsl(0,0%,100%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -1px;
  left: -1px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  outline: 2px solid transparent;
}

.c1.fi-radio-button .fi-radio-button_input:focus:not(:focus-visible) + .fi-radio-button_icon_wrapper {
  box-shadow: none;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
  cursor: not-allowed;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  fill: hsl(202,7%,97%);
  stroke: hsl(202,7%,80%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  top: 2px;
  left: 2px;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 0;
  left: 0;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-radio-button_icon {
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  width: 32px;
  height: 32px;
  top: -1px;
  left: -1px;
}

.c1.fi-radio-button--large .fi-radio-button_label {
  padding-left: 40px;
  line-height: 34px;
}

<div>
  <div
    class="c0 fi-radio-button fi-radio-button_container c1 custom-className"
  >
    <input
      class="c2 fi-radio-button_input"
      id="test-id"
      type="radio"
      value="value"
    />
    <span
      class="c3 fi-radio-button_icon_wrapper"
    >
      <svg
        aria-hidden="true"
        class="fi-icon c4 fi-radio-button_icon"
        focusable="false"
        height="1em"
        viewBox="0 0 18 18"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <circle
            class="fi-icon-radio-base"
            cx="9"
            cy="9"
            r="8.5"
          />
          <circle
            class="fi-icon-radio-checked"
            cx="9"
            cy="9"
            r="4"
          />
        </g>
      </svg>
    </span>
    <label
      class="c5 fi-radio-button_label"
      for="test-id"
    >
      Label text here
    </label>
  </div>
</div>
`;

exports[`disabled should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c3::before,
.c3::after {
  box-sizing: border-box;
}

.c4 {
  vertical-align: baseline;
}

.c4.fi-static-icon {
  display: inline-block;
}

.c4.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c4.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  position: relative;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_label {
  font-size: 16px;
  position: relative;
  cursor: pointer;
  line-height: 27px;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  z-index: -9999;
  height: 18px;
  width: 18px;
  top: 5px;
  left: 2px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 3px;
  left: 0;
  margin: 2px;
  height: 18px;
  width: 18px;
  position: absolute;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(201,7%,58%);
  fill: hsl(0,0%,100%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -1px;
  left: -1px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  outline: 2px solid transparent;
}

.c1.fi-radio-button .fi-radio-button_input:focus:not(:focus-visible) + .fi-radio-button_icon_wrapper {
  box-shadow: none;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
  cursor: not-allowed;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  fill: hsl(202,7%,97%);
  stroke: hsl(202,7%,80%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  top: 2px;
  left: 2px;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 0;
  left: 0;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-radio-button_icon {
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  width: 32px;
  height: 32px;
  top: -1px;
  left: -1px;
}

.c1.fi-radio-button--large .fi-radio-button_label {
  padding-left: 40px;
  line-height: 34px;
}

<div>
  <div
    class="c0 fi-radio-button fi-radio-button_container c1 fi-radio-button--disabled"
  >
    <input
      class="c2 fi-radio-button_input"
      disabled=""
      id="test-id"
      type="radio"
      value="value"
    />
    <span
      class="c3 fi-radio-button_icon_wrapper"
    >
      <svg
        aria-hidden="true"
        class="fi-icon c4 fi-radio-button_icon"
        focusable="false"
        height="1em"
        viewBox="0 0 18 18"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <circle
            class="fi-icon-radio-base"
            cx="9"
            cy="9"
            r="8.5"
          />
          <circle
            class="fi-icon-radio-checked"
            cx="9"
            cy="9"
            r="4"
          />
        </g>
      </svg>
    </span>
    <label
      class="c5 fi-radio-button_label"
      for="test-id"
    >
      Label text here
    </label>
  </div>
</div>
`;

exports[`hintText should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c3::before,
.c3::after {
  box-sizing: border-box;
}

.c6 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c6.fi-hint-text {
  display: block;
}

.c4 {
  vertical-align: baseline;
}

.c4.fi-static-icon {
  display: inline-block;
}

.c4.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c4.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  position: relative;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_label {
  font-size: 16px;
  position: relative;
  cursor: pointer;
  line-height: 27px;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  z-index: -9999;
  height: 18px;
  width: 18px;
  top: 5px;
  left: 2px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 3px;
  left: 0;
  margin: 2px;
  height: 18px;
  width: 18px;
  position: absolute;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(201,7%,58%);
  fill: hsl(0,0%,100%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -1px;
  left: -1px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  outline: 2px solid transparent;
}

.c1.fi-radio-button .fi-radio-button_input:focus:not(:focus-visible) + .fi-radio-button_icon_wrapper {
  box-shadow: none;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
  cursor: not-allowed;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  fill: hsl(202,7%,97%);
  stroke: hsl(202,7%,80%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  top: 2px;
  left: 2px;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 0;
  left: 0;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-radio-button_icon {
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  width: 32px;
  height: 32px;
  top: -1px;
  left: -1px;
}

.c1.fi-radio-button--large .fi-radio-button_label {
  padding-left: 40px;
  line-height: 34px;
}

<div>
  <div
    class="c0 fi-radio-button fi-radio-button_container c1"
  >
    <input
      aria-describedby="test-id-hintText"
      class="c2 fi-radio-button_input"
      id="test-id"
      type="radio"
      value="value"
    />
    <span
      class="c3 fi-radio-button_icon_wrapper"
    >
      <svg
        aria-hidden="true"
        class="fi-icon c4 fi-radio-button_icon"
        focusable="false"
        height="1em"
        viewBox="0 0 18 18"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <circle
            class="fi-icon-radio-base"
            cx="9"
            cy="9"
            r="8.5"
          />
          <circle
            class="fi-icon-radio-checked"
            cx="9"
            cy="9"
            r="4"
          />
        </g>
      </svg>
    </span>
    <label
      class="c5 fi-radio-button_label"
      for="test-id"
    >
      Label text here
    </label>
    <span
      class="c3 c6 fi-radio-button_hintText fi-hint-text"
      id="test-id-hintText"
    >
      Example hint text
    </span>
  </div>
</div>
`;

exports[`id should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c3::before,
.c3::after {
  box-sizing: border-box;
}

.c4 {
  vertical-align: baseline;
}

.c4.fi-static-icon {
  display: inline-block;
}

.c4.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c4.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  position: relative;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_label {
  font-size: 16px;
  position: relative;
  cursor: pointer;
  line-height: 27px;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  z-index: -9999;
  height: 18px;
  width: 18px;
  top: 5px;
  left: 2px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 3px;
  left: 0;
  margin: 2px;
  height: 18px;
  width: 18px;
  position: absolute;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(201,7%,58%);
  fill: hsl(0,0%,100%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -1px;
  left: -1px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  outline: 2px solid transparent;
}

.c1.fi-radio-button .fi-radio-button_input:focus:not(:focus-visible) + .fi-radio-button_icon_wrapper {
  box-shadow: none;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
  cursor: not-allowed;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  fill: hsl(202,7%,97%);
  stroke: hsl(202,7%,80%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  top: 2px;
  left: 2px;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 0;
  left: 0;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-radio-button_icon {
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  width: 32px;
  height: 32px;
  top: -1px;
  left: -1px;
}

.c1.fi-radio-button--large .fi-radio-button_label {
  padding-left: 40px;
  line-height: 34px;
}

<div>
  <div
    class="c0 fi-radio-button fi-radio-button_container c1"
  >
    <input
      class="c2 fi-radio-button_input"
      id="good-id"
      type="radio"
      value="value"
    />
    <span
      class="c3 fi-radio-button_icon_wrapper"
    >
      <svg
        aria-hidden="true"
        class="fi-icon c4 fi-radio-button_icon"
        focusable="false"
        height="1em"
        viewBox="0 0 18 18"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <circle
            class="fi-icon-radio-base"
            cx="9"
            cy="9"
            r="8.5"
          />
          <circle
            class="fi-icon-radio-checked"
            cx="9"
            cy="9"
            r="4"
          />
        </g>
      </svg>
    </span>
    <label
      class="c5 fi-radio-button_label"
      for="good-id"
    >
      Label text here
    </label>
  </div>
</div>
`;

exports[`name should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c3::before,
.c3::after {
  box-sizing: border-box;
}

.c4 {
  vertical-align: baseline;
}

.c4.fi-static-icon {
  display: inline-block;
}

.c4.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c4.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  position: relative;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_label {
  font-size: 16px;
  position: relative;
  cursor: pointer;
  line-height: 27px;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  z-index: -9999;
  height: 18px;
  width: 18px;
  top: 5px;
  left: 2px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 3px;
  left: 0;
  margin: 2px;
  height: 18px;
  width: 18px;
  position: absolute;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(201,7%,58%);
  fill: hsl(0,0%,100%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -1px;
  left: -1px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  outline: 2px solid transparent;
}

.c1.fi-radio-button .fi-radio-button_input:focus:not(:focus-visible) + .fi-radio-button_icon_wrapper {
  box-shadow: none;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
  cursor: not-allowed;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  fill: hsl(202,7%,97%);
  stroke: hsl(202,7%,80%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  top: 2px;
  left: 2px;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 0;
  left: 0;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-radio-button_icon {
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  width: 32px;
  height: 32px;
  top: -1px;
  left: -1px;
}

.c1.fi-radio-button--large .fi-radio-button_label {
  padding-left: 40px;
  line-height: 34px;
}

<div>
  <div
    class="c0 fi-radio-button fi-radio-button_container c1"
  >
    <input
      class="c2 fi-radio-button_input"
      id="test-id"
      name="group-name"
      type="radio"
      value="value"
    />
    <span
      class="c3 fi-radio-button_icon_wrapper"
    >
      <svg
        aria-hidden="true"
        class="fi-icon c4 fi-radio-button_icon"
        focusable="false"
        height="1em"
        viewBox="0 0 18 18"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <circle
            class="fi-icon-radio-base"
            cx="9"
            cy="9"
            r="8.5"
          />
          <circle
            class="fi-icon-radio-checked"
            cx="9"
            cy="9"
            r="4"
          />
        </g>
      </svg>
    </span>
    <label
      class="c5 fi-radio-button_label"
      for="test-id"
    >
      Label text here
    </label>
  </div>
</div>
`;

exports[`value should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c3::before,
.c3::after {
  box-sizing: border-box;
}

.c4 {
  vertical-align: baseline;
}

.c4.fi-static-icon {
  display: inline-block;
}

.c4.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c4.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  position: relative;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_label {
  font-size: 16px;
  position: relative;
  cursor: pointer;
  line-height: 27px;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  z-index: -9999;
  height: 18px;
  width: 18px;
  top: 5px;
  left: 2px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 3px;
  left: 0;
  margin: 2px;
  height: 18px;
  width: 18px;
  position: absolute;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(201,7%,58%);
  fill: hsl(0,0%,100%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -1px;
  left: -1px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  outline: 2px solid transparent;
}

.c1.fi-radio-button .fi-radio-button_input:focus:not(:focus-visible) + .fi-radio-button_icon_wrapper {
  box-shadow: none;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
  cursor: not-allowed;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  fill: hsl(202,7%,97%);
  stroke: hsl(202,7%,80%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  top: 2px;
  left: 2px;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 0;
  left: 0;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-radio-button_icon {
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  width: 32px;
  height: 32px;
  top: -1px;
  left: -1px;
}

.c1.fi-radio-button--large .fi-radio-button_label {
  padding-left: 40px;
  line-height: 34px;
}

<div>
  <div
    class="c0 fi-radio-button fi-radio-button_container c1"
  >
    <input
      class="c2 fi-radio-button_input"
      id="test-id"
      type="radio"
      value="option-value-1"
    />
    <span
      class="c3 fi-radio-button_icon_wrapper"
    >
      <svg
        aria-hidden="true"
        class="fi-icon c4 fi-radio-button_icon"
        focusable="false"
        height="1em"
        viewBox="0 0 18 18"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <circle
            class="fi-icon-radio-base"
            cx="9"
            cy="9"
            r="8.5"
          />
          <circle
            class="fi-icon-radio-checked"
            cx="9"
            cy="9"
            r="4"
          />
        </g>
      </svg>
    </span>
    <label
      class="c5 fi-radio-button_label"
      for="test-id"
    >
      Label text here
    </label>
  </div>
</div>
`;

exports[`variant should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c5::before,
.c5::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c3::before,
.c3::after {
  box-sizing: border-box;
}

.c4 {
  vertical-align: baseline;
}

.c4.fi-static-icon {
  display: inline-block;
}

.c4.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c4.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  position: relative;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_label {
  font-size: 16px;
  position: relative;
  cursor: pointer;
  line-height: 27px;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  z-index: -9999;
  height: 18px;
  width: 18px;
  top: 5px;
  left: 2px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 3px;
  left: 0;
  margin: 2px;
  height: 18px;
  width: 18px;
  position: absolute;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(201,7%,58%);
  fill: hsl(0,0%,100%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  stroke: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -1px;
  left: -1px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  outline: 2px solid transparent;
}

.c1.fi-radio-button .fi-radio-button_input:focus:not(:focus-visible) + .fi-radio-button_icon_wrapper {
  box-shadow: none;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
  cursor: not-allowed;
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-icon-radio-base {
  fill: hsl(202,7%,97%);
  stroke: hsl(202,7%,80%);
}

.c1.fi-radio-button.fi-radio-button--disabled .fi-radio-button_input:checked + .fi-radio-button_icon_wrapper .fi-icon-radio-checked {
  fill: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  top: 2px;
  left: 2px;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper {
  top: 0;
  left: 0;
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_icon_wrapper .fi-radio-button_icon {
  height: 30px;
  width: 30px;
}

.c1.fi-radio-button--large .fi-radio-button_input:focus + .fi-radio-button_icon_wrapper::after {
  width: 32px;
  height: 32px;
  top: -1px;
  left: -1px;
}

.c1.fi-radio-button--large .fi-radio-button_label {
  padding-left: 40px;
  line-height: 34px;
}

<div>
  <div
    class="c0 fi-radio-button fi-radio-button_container c1 fi-radio-button--large"
  >
    <input
      class="c2 fi-radio-button_input"
      id="test-id"
      type="radio"
      value="value"
    />
    <span
      class="c3 fi-radio-button_icon_wrapper"
    >
      <svg
        aria-hidden="true"
        class="fi-icon c4 fi-radio-button_icon"
        focusable="false"
        height="1em"
        viewBox="0 0 30 30"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <circle
            class="fi-icon-radio-base"
            cx="15"
            cy="15"
            r="14.5"
          />
          <circle
            class="fi-icon-radio-checked"
            cx="15"
            cy="15"
            r="8"
          />
        </g>
      </svg>
    </span>
    <label
      class="c5 fi-radio-button_label"
      for="test-id"
    >
      Label text here
    </label>
  </div>
</div>
`;
